--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
   <div class="container-fulid">
   
     <div class="container-fulid">
+
       <div class="row">
         <div class="col">
           <nav class="navbar navbar-dark bg-dark d-flex justify-content-between">
             <span class="navbar-brand">らくらくお客様の声</span>
             <div class="btn-group">
+              <button class="btn btn-success rounded"
+              data-bs-toggle="modal" data-bs-target="#shopcodeModal"
+              >店舗情報</button>
               <button class="btn btn-success rounded"
               data-bs-toggle="modal" data-bs-target="#masterModal"
               >マスターを登録する</button>
@@ -30,8 +34,10 @@
           </nav>
         </div>
       </div>
+      
     </div>
 
+  
 
     <div class="row">
       <div class="col mx-5">
@@ -63,11 +69,11 @@
   </div>
 
   <!-- 設定Modal -->
-  <div class="modal fade" id="settingModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="settingModal" tabindex="-1" aria-labelledby="settingModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">文章の編集</h5>
+          <h5 class="modal-title" id="settingModalLabel">文章の編集</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -97,11 +103,11 @@
   </div>
 
   <!-- マスター登録Modal -->
-  <div class="modal fade" id="masterModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="masterModal" tabindex="-1" aria-labelledby="masterModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">マスターを更新する</h5>
+          <h5 class="modal-title" id="masterModalLabel">マスターを更新する</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -122,6 +128,34 @@
     </div>
   </div>
 
+  <!-- 店コードModal -->
+  <div class="modal fade" id="shopcodeModal" tabindex="-1" aria-labelledby="shopcodeModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="shopcodeModalLabel">店舗情報</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">店コード</th>
+                <th scope="col">店舗名</th>
+              </tr>
+            </thead>
+            <tbody id="shopDataContainer">
+      
+            </tbody>
+          </table>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
 
 
@@ -131,6 +165,7 @@
   integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
   integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+  <script src="./setting.js"></script>
   <script src="./main.js"></script>
 
 </body>
