検索 table成形作業

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <nav class="navbar navbar-dark bg-dark" style="height: 0;z-index: 1;">
               <div class="collapse navbar-collapse" 
               id="navbarSupportedContent">
-                <div class="bg-light border-bottom" style="height: 370px; width: 100vw;">
+                <div class="bg-light border-bottom" style="height: 370px; width: 100vw; overflow-y: scroll;">
                   <table class="table table-hover" id="result" style="color: rgb(148, 154, 160);">
                   <!-- AS search reult here! -->
                   </table>
@@ -142,6 +142,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="masterModalLabel">マスターを更新する</h5>
+          <span id="updated" style="font-size: 12px;margin: 0 auto;"></span>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
