--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="row">
           <nav class="navbar navbar-dark bg-dark d-flex topnav justify-content-between">
               <div class="col-4">
-                <span class="navbar-brand"><a href="">らくらくお客様の声</a></span>
+                <span class="navbar-brand" id="aaa"><a href="">らくらくお客様の声</a></span>
               </div>
               <div class="col-7" style="text-align: end;">
                 <div class="btn-group">
@@ -28,7 +28,6 @@
                   <div class="form-inline d-flex">
                     <input class="form-control mr-sm-2 bg-light border-0"  placeholder="Search" aria-label="Search" id="masterSearchbox"
                     data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
-            
                     >
                     <button class="nav-search-btn btn btn-light my-2 my-sm-0" id="navSearchBtn" >
                       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search"
@@ -103,34 +102,63 @@
   </div>
 
   <!-- 設定Modal -->
-  <div class="modal fade" id="settingModal" tabindex="-1" aria-labelledby="settingModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+  <div class="modal fade" id="settingModal" tabindex="-1" data-bs-backdrop="static" aria-labelledby="settingModalLabel" aria-hidden="true">
+    <div class="modal-dialog w-75" style="max-width: none;">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="settingModalLabel">文章の編集</h5>
+          <h5 class="modal-title" id="settingModalLabel">設定</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <div class="col-5">
-            <div class="row d-flex">
-              <div class="col d-flex justify-content-between">
-                <label for="starMsg">書き出しの文章</label>
+
+          <!-- 文章の設定ドロップダウン -->
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="setting_message" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              文章の設定
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="setting_message">
+              <div class="col-5">
+                <div class="row d-flex">
+                  <div class="col d-flex justify-content-between">
+                    <label for="starMsg">書き出しの文章</label>
+                  </div>
+                </div>
+                <textarea name="startMsg" id="startMsg" cols="50" rows="5"></textarea>
+                <div class="row d-flex">
+                  <div class="col d-flex justify-content-between">
+                    <label for="lastMsg">結びの文章</label>
+                  </div>
+                </div>
+                <textarea name="lastMsg" id="lastMsg" cols="50" rows="5"></textarea>
               </div>
-            </div>
-            <textarea name="startMsg" id="startMsg" cols="50" rows="5"></textarea>
-          
-            <div class="row d-flex">
-              <div class="col d-flex justify-content-between">
-                <label for="lastMsg">結びの文章</label>
-              </div>
-            </div>
-            <textarea name="lastMsg" id="lastMsg" cols="50" rows="5"></textarea>
+              <button type="button" class="btn btn-primary" id="changeMsg">Save changes</button>
+            </ul>
           </div>
+          <!-- モーダル閉じるときの属性 -->
+<!-- data-bs-dismiss="modal" -->
+          <!-- アドレスの登録ドロップダウン -->
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="setting_adress" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              アドレスの登録
+            </button>
+            <ul class="dropdown-menu w-100 p-5" aria-labelledby="setting_adress" id="adressContainer">
+              <label for="akitaya_1110" class="form-label">秋田屋</label>
+              <input type="email" class="form-control" id="akitaya_1110" placeholder="name@example.com">
+              <label for="mitubishi_1140" class="form-label">三菱食品</label>
+              <input type="email" class="form-control" id="mitubishi_1140" placeholder="name@example.com">
+              <label for="kokubu_1150" class="form-label">国分</label>
+              <input type="email" class="form-control" id="kokubu_1150" placeholder="name@example.com">
+              <label for="izumic_1160" class="form-label">イズミック</label>
+              <input type="email" class="form-control" id="izumic_1160" placeholder="name@example.com">
+              <button type="button" class="btn btn-primary" id="saveAdress">Save changes</button>
+            </ul>
+          </div>
+
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" data-bs-dismiss="modal" 
-          class="btn btn-primary" id="changeMsg">Save changes</button>
         </div>
       </div>
     </div>
@@ -196,10 +224,10 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
+<!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
   integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
-  integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+  integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script> -->
   <script src="./setting.js"></script>
   <script src="./db.js"></script>
   <script src="./main.js"></script>
