--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         </div>
         <div class="modal-body">
           <div class="card rounded bg-light input-area mx-auto my-3">
-            <div class="card-text drop-text">
+            <div class="card-text drop-text" id="csvinput">
               please drag & drop <span>CSV!</span>
             </div>
             <input type="file" id="master" accept=".csv,.txt" class="bg-light input-tag">
