分類コード読み取り修正 ローダー修正

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
               <p class="text-center text-secondary mt-3 mb-0">CSVファイルをインポートすることで表示がわかりやすくなります</p>
               <p class="text-center text-secondary my-0">「メーカー名」「中小分類」「店コード」</p>
                 <div class="card rounded bg-light input-area mx-auto my-3">
-                  <div class="card-text drop-text" id="csvinput">
+                  <div class="card-text drop-text" id="csvinput_as_settings">
                     please drag & drop <span>CSV!</span>
                   </div>
                   <input type="file" id="master" accept=".csv,.txt" class="bg-light input-tag">
