設定微調整

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <!-- 各種CSVインポート -->
             <div class="tab-pane fade" id="import" role="tabpanel" aria-labelledby="import-tab">
               <p class="text-center text-secondary mt-3 mb-0">CSVファイルをインポートすることで表示がわかりやすくなります</p>
-              <p class="text-center text-secondary my-0">「メーカー名」「中小分類」「店コード」</p>
+              <p class="text-center text-secondary my-0">「店コード」「メーカー名」「中小分類」「店コード」</p>
                 <div class="card rounded bg-light input-area mx-auto my-3">
                   <div class="card-text drop-text" id="csvinput_as_settings">
                     please drag & drop <span>CSV!</span>
