--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@
               </div>           
           </nav>
 
+          <!-- 検索結果表示コンテナ -->
           <nav class="navbar navbar-dark bg-dark" style="height: 0;z-index: 1;">
               <div class="collapse navbar-collapse" 
               id="navbarSupportedContent">
-                <div class="bg-light border-bottom" style="height: 370px; width: 100vw; overflow-y: scroll;">
+                <div class="bg-light border-bottom" style="height: 370px; width: 100vw; overflow: scroll;">
                   <table class="table table-hover" id="result" style="color: rgb(148, 154, 160);">
                   <!-- AS search reult here! -->
                   </table>
